# hello-newbie

./: ChangeLog  LICENSE  Makefile.am  README.md  TODO  configure.ac  hello-newbie.1  hello-newbie.c  redo.sh
