#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hello-newbie], [0.1], [eriberto@eriberto.pro.br])
AC_CONFIG_SRCDIR([hello-newbie.c])
AC_CONFIG_HEADERS([config.h])
AC_COPYRIGHT([Copyright 2015, Joao Eriberto Mota Filho])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
# Inserido
AM_INIT_AUTOMAKE

AC_OUTPUT

#([foreign -Wall -Werror])
